--- a/styles/gauntlet.css
+++ b/styles/gauntlet.css
@@ -117,3 +117,12 @@ body {
   font-weight: 900;
   border-color: #000;
  }
+
+ #attackButton {
+  display: block; 
+  margin: 50px auto 0 auto;
+ }
+
+ .bordered {
+  border: 1px solid black;
+ }
