--- a/styles/gauntlet.css
+++ b/styles/gauntlet.css
@@ -119,7 +119,8 @@ body {
   border-color: #000;
  }
 
- #attackButton {
+ #attackButton,
+ #playAgainButton {
   display: block; 
   margin: 50px auto 0 auto;
  }
@@ -144,4 +145,14 @@ body {
  img {
   max-height: 300px;
 
+ }
+
+
+ #fightText {
+  text-align: center;
+ }
+
+
+ .hidden {
+  display: none;
  }
