changed background image and made it a little more fun

--- a/styles/gauntlet.css
+++ b/styles/gauntlet.css
@@ -149,3 +149,11 @@ body {
   max-height: 250px;
 
  }
+
+ .victoryScreen {
+  background-image: url("http://www.freehdimages.in/uploads/large/desktop-american-flag-with-eagle-pics.jpg");
+  background-repeat: none;
+  background-size: contain, center;
+
+
+ }
